Fix a bug where the json inside the respons wasn't aligned properly

--- a/src/components/howitworks/responses/ResponseBox.css
+++ b/src/components/howitworks/responses/ResponseBox.css
@@ -35,7 +35,7 @@
   font-weight: bold;
   font-size: 15px; 
   float: right;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .response-active:after {
@@ -43,7 +43,7 @@
 }
 
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+/* Add a background color to the button if it is clicked on, and when we move the mouse over it (hover) */
 .response-active, .response-button-collapsible:hover {
   background-color: var(--gallery);
 }
@@ -54,4 +54,14 @@
   overflow: hidden;
   background-color: var(--athensGreyLight);
   transition: max-height 0.2s ease-out;
+}
+
+/* Style the response json */ 
+.response-content pre,
+.response-content code {
+	font-family: 'PT Mono' , monospace;
+	font-size: .9rem;
+	line-height: 1.75rem;
+  letter-spacing: .01rem;
+  padding: 0px 0px 0px 25px !important;
 }
